codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: rendered
---


























● I’m going to search the repo for where “Change Approved” is rendered to update
  that view.
• Explored
  └ Searched query Change Approved
    Read file diff_render.rs
────────────────────────────────────────────────────────────────────────────────

› Summarize recent commits

  • Investigating rendering code (0s • esc to interrupt)     100% context left
